--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello world - we use git
+    Hello world 
+    today is a great day
 </body>
 </html>
