--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello world 
-    today is a great day
+    Hello world - we use git
+    <h1>We add this</h1>
 </body>
 </html>
